--- a/EatBall_Rampage.uproject
+++ b/EatBall_Rampage.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{7C3DF56E-435D-D91E-C10C-EC8C84D873AC}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
